# libbson

./: .gitignore  .mci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  README.rst  THIRD_PARTY_NOTICES  abicheck.sh  autogen.sh  configure.ac  libbson-1.0.pc.in  libbson.podspec
.evergreen/: check-release-archive.sh  cmake.sh  compile-unix-cmake.sh  compile-unix.sh  compile-windows.sh  compile.sh  config.yml  link-sample-program.bat  link-sample-program.sh  unix.sh  windows.sh
bindings/python/: Makefile.include  cbson-dbref.c  cbson-dbref.h  cbson-oid.c  cbson-oid.h  cbson-util.c  cbson-util.h  cbson.c  time64.c
bson/: .gitignore  Makefile.include  b64_ntop.h  b64_pton.h  bcon.c  bcon.h  bson-atomic.h  bson-clock.c  bson-clock.h  bson-compat.c  bson-compat.h  bson-config.h  bson-config.h.in  bson-context-private.h  bson-context.c  bson-context.h  bson-endian.h  bson-error.c  bson-error.h  bson-iter.c  bson-iter.h  bson-json.c  bson-json.h  bson-keys.c  bson-keys.h  bson-macros.h  bson-md5.c  bson-md5.h  bson-memory.c  bson-memory.h  bson-oid.c  bson-oid.h  bson-private.h  bson-reader.c  bson-reader.h  bson-string.c  bson-string.h  bson-thread-private.h  bson-thread.h  bson-types.h  (+8 more)
debian/: changelog  control  copyright  gbp.conf  libbson-1.0-0.symbols  libbson-dev.install  libbson-doc.lintian-overrides  rules  shlibs.local  watch
debian/patches/: 0001_remove_analytics.patch  0001_use_system_yajl.patch  0002_use_libatomic.patch  0003_spelling_bson_writer_get_length  0004_update_dist_for_sphinx.patch  series
doc/: .gitignore  Makefile.am  Makefile.include  api.rst  asciidoc.conf  bson.md  bson.txt  bson_append_array.page  bson_append_array.rst  bson_append_array.txt  bson_append_array_begin.page  bson_append_array_begin.rst  bson_append_array_begin.txt  bson_append_array_end.page  bson_append_array_end.rst  bson_append_array_end.txt  bson_append_binary.page  bson_append_binary.rst  bson_append_binary.txt  bson_append_bool.page  bson_append_bool.rst  bson_append_bool.txt  bson_append_code.page  bson_append_code.rst  bson_append_code.txt  bson_append_code_with_scope.page  bson_append_code_with_scope.rst  bson_append_code_with_scope.txt  bson_append_date_time.page  bson_append_date_time.rst  bson_append_date_time.txt  bson_append_dbpointer.page  bson_append_dbpointer.rst  bson_append_dbpointer.txt  bson_append_decimal128.page  bson_append_decimal128.rst  bson_append_document.page  bson_append_document.rst  bson_append_document.txt  bson_append_document_begin.page  (+457 more)
doc/attic/: bson_new.txt
doc/html/: Makefile.am
doc/man/: Makefile.am
doc/mongoc-theme/static/: mongoc.css_t
examples/: Makefile.am  Makefile.include  bcon-col-view.c  bcon-speed.c  bson-metrics.c  bson-streaming-reader.c  bson-to-json.c  bson-validate.c  compile-with-pkg-config-static.sh  compile-with-pkg-config.sh  hello_bson.c  json-to-bson.c
examples/cmake/FindPkgConfig/: CMakeLists.txt  hello_bson.c
examples/cmake/FindPkgConfig_static/: CMakeLists.txt
examples/cmake/find_package/: CMakeLists.txt
examples/cmake/find_package_static/: CMakeLists.txt
m4/: ac_need_stdint_h.m4
src/: Makefile.am  libbson-1.0.pc.in  libbson-static-1.0.pc.in  libbson.modulemap  libbson.symbols  libbson_all.c
src/bindings/objc/: BSONDeserializer.h  BSONDeserializer.m  BSONDocument.h  BSONDocument.m  BSONSerialization.h  BSONSerialization.m  BSONSerializer.h  BSONSerializer.m  BSONTypes.h  BSONTypes.m  BSON_Helper.h  ObjCBSON.h  ObjCBSON.m  TODO
src/bindings/objc/OrderedDictionary/: BSON_OrderedDictionary.h  BSON_OrderedDictionary.m
src/bindings/objc/Xcode/libbson tests (iOS)/: libbson tests (iOS)-Info.plist
src/bindings/objc/Xcode/libbson.xcodeproj/: project.pbxproj
src/bindings/objc/Xcode/libbson.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/bindings/objc/Xcode/libbson.xcodeproj/project.xcworkspace/xcshareddata/: libbson.xccheckout
src/bindings/objc/tests/: TestBSONDocument.m  TestBSONSerialization.m  TestBSONSerializer.m
src/bindings/python/: Makefile.am  cbson-dbref.h  cbson-oid.c  cbson-oid.h  cbson-util.h  cbson.c
src/bson/: .gitignore  Makefile.am  b64.c  b64_ntop.h  b64_pton.h  bcon.c  bcon.h  bson-atomic.c  bson-atomic.h  bson-clock.c  bson-clock.h  bson-compat.h  bson-config.h.in  bson-context-private.h  bson-context.c  bson-context.h  bson-dec128.c  bson-dec128.h  bson-decimal128.c  bson-decimal128.h  bson-endian.h  bson-error.c  bson-error.h  bson-iso8601-private.h  bson-iso8601.c  bson-iter.c  bson-iter.h  bson-json.c  bson-json.h  bson-keys.c  bson-keys.h  bson-macros.h  bson-md5.h  bson-memory.c  bson-memory.h  bson-oid.c  bson-oid.h  bson-private.h  bson-rand.c  bson-rand.h  (+19 more)
src/jsonsl/: jsonsl.c  jsonsl.h
src/yajl/: Makefile.am  yajl.c  yajl_common.h  yajl_gen.c  yajl_gen.h  yajl_lex.c  yajl_parse.h  yajl_parser.c  yajl_tree.c
tests/: Makefile.am  Makefile.include  TestSuite.c  TestSuite.h  abicheck.sh  bson-tests.h  corpus-test.c  corpus-test.h  json-test.c  json-test.h  main.c  test-atomic.c  test-bcon-basic.c  test-bcon-extract.c  test-bson-clock.c  test-bson-corpus.c  test-bson-error.c  test-bson-iter.c  test-bson-json.c  test-bson-oid.c  test-bson-reader.c  test-bson-string.c  test-bson-utf8.c  test-bson-writer.c  test-bson.c  test-clock.c  test-dec128.c  test-decimal128.c  test-endian.c  test-error.c  test-iso8601.c  test-iter.c  test-json.c  test-libbson.c  test-oid.c  test-reader.c  test-string.c  test-type.c  test-type.h  test-utf8.c  (+3 more)
tests/json/bson_corpus/: code.json  code_w_scope.json  multi-type-deprecated.json  multi-type.json  string.json
tests/json/type/: array.json  boolean.json  corrupted.json  decimal128.json  int32.json
yajl/: Makefile.include  yajl_gen.c  yajl_parser.c  yajl_parser.h
yajl/api/: yajl_parse.h
