libbson_1_0_la_SOURCES += \
	$(libbson_srcdir)/src/yajl/yajl_tree.h \
	$(libbson_srcdir)/src/yajl/yajl_parse.h \
	$(libbson_srcdir)/src/yajl/yajl_gen.h \
	$(libbson_srcdir)/src/yajl/yajl_common.h \
	$(libbson_srcdir)/src/yajl/yajl_version.h \
	$(libbson_srcdir)/src/yajl/yajl_parser.h \
	$(libbson_srcdir)/src/yajl/yajl_encode.h \
	$(libbson_srcdir)/src/yajl/yajl_buf.h \
	$(libbson_srcdir)/src/yajl/yajl_alloc.h \
	$(libbson_srcdir)/src/yajl/yajl_bytestack.h \
	$(libbson_srcdir)/src/yajl/yajl_lex.h \
	$(libbson_srcdir)/src/yajl/yajl_version.c \
	$(libbson_srcdir)/src/yajl/yajl.c \
	$(libbson_srcdir)/src/yajl/yajl_encode.c \
	$(libbson_srcdir)/src/yajl/yajl_lex.c \
	$(libbson_srcdir)/src/yajl/yajl_parser.c \
	$(libbson_srcdir)/src/yajl/yajl_buf.c \
	$(libbson_srcdir)/src/yajl/yajl_tree.c \
	$(libbson_srcdir)/src/yajl/yajl_alloc.c \
	$(libbson_srcdir)/src/yajl/yajl_gen.c
